Added facts parsing to person info
